Se modifica img contacto

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1820,7 +1820,7 @@ ul.styled-list.list-star li:before {
 .mg-page-title {
   padding-top: 70px;
   padding-bottom: 50px;
-  background-image: url(../images/page-title.png);
+  background-image: url(../images/villa_2.png);
   color: #fff;
   text-align: center;
 }
