Se cambia code de seccion testimonios

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,10 @@
   background-image: url(../images/Big_Family.png);
 }
 
+.img-testimonio {
+align-items: center;
+}
+
 
 body {
   font-family: "Open Sans";
