Se arregla la seccion testimonios adaptados para moviles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,17 @@
 align-items: center;
 }
 
+#container-img-profile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#container-img-profile>img {
+  max-width: 50%;
+}
+
+
 
 body {
   font-family: "Open Sans";
