ADD galeria en pagina experiencia

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,12 @@ align-items: center;
   max-width: 50%;
 }
 
+#container-galeria {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 
 body {
