--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,10 @@
   background-image: url(../images/Big_Family.png);
 }
 
+.main-img-galeria-page {
+  background-image: url(../images/Galeria_header.png);
+}
+
 .img-testimonio {
 align-items: center;
 }
