Se cambia el color de fondo galeria open img

--- a/assets/css/nivo-lightbox-theme.css
+++ b/assets/css/nivo-lightbox-theme.css
@@ -8,8 +8,8 @@
  */
  
 .nivo-lightbox-theme-default.nivo-lightbox-overlay { 
-	background: #666;
-	background: rgba(0,0,0,0.6); 
+	background:#161b15;
+	/* background: rgba(0,0,0,0.6);  */
 }
 .nivo-lightbox-theme-default .nivo-lightbox-content.nivo-lightbox-loading { background: url(../images/nivo/loading.gif) no-repeat 50% 50%; }
 
