Se aplican cambios prefinales solicitados

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@
 }
 
 .main-img-big-family {
-  background-image: url(../images/Big_Family.png);
+  background-image: url(../images/Header_Big_Family.png);
 }
 
 .main-img-galeria-page {
