--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,75 @@
 @charset "UTF-8";
 
+#btn-style{
+  border-radius: 20px;
+}
+
+.menu-transparente{
+  margin-top: 20px;
+}
+#imglogo{
+  display: block;
+  margin: auto;
+  margin-top: 20px;
+}
+
+#iconcalendar{
+  text-align: right;
+}
+
+#iconmenu{
+  text-align: left;
+}
+
+ /* The side navigation menu */
+ .sidenav {
+  height: 100%; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #16262e; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+/* The navigation menu links */
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+  transition: margin-left .5s;
+  padding: 20px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+} 
 .txt-desc-testimonios {
   color: white;
 }
@@ -534,7 +604,7 @@ img {
 
 .btn-warning {
   color: #FFF;
-  background-color: #f6a430;
+  background-color: #e7b315;
   border-color: #f6a430;
 }
 
@@ -1659,7 +1729,14 @@ ul.styled-list.list-star li:before {
 
 .header.transp .navbar-inverse,
 .header.transp .mg-search-box {
-  background-color: rgba(22, 38, 46, 0.3);
+  background-color: rgba(22, 38, 46, 0);
+}
+
+@media screen and (max-width: 600px) {
+  .header.transp .navbar-inverse,
+  .header.transp .mg-search-box {
+  display: none;
+}
 }
 
 .header.transp .navbar-default {
@@ -1725,7 +1802,7 @@ ul.styled-list.list-star li:before {
 }
 
 .header.sticky-on .navbar-inverse {
-  background-color: rgba(22, 38, 46, 0.95);
+  /* background-color: rgba(22, 38, 46, 0.8); */
 }
 
 .header.sticky-on .navbar-inverse .navbar-nav > li > a {
