--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
-  color: #f1f1f1;
+  color: #e7b315;
 }
 
 /* Position and style the close button (top right corner) */
