--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,28 @@
 @charset "UTF-8";
 
+.img-explora {
+  width: 100%;
+  height: 400px;
+}
+#title-explora-exp{
+  color: white;
+}
+.main-experiencias-personalizadas {
+  background-color: #4b5e71;
+}
 #name-firma {
   letter-spacing: 2px;
   text-align: center;
-  padding-top: 20px;
+  padding-top: 10px;
 }
 
 #img-firma{
   width: 155px;
   height: auto;
-  padding-top: 30px;
+  padding-top: 20px;
 }
 #text-main-firma{
-  padding-top: 75px;
+  padding-top: 50px;
   color: #a47e2f;
   text-align: center;
 }
@@ -2991,6 +3001,7 @@ div.cs-skin-elastic .cs-options .cs-selected span::after {
 
 .mg-room:hover figcaption {
   background-color: rgba(0, 0, 0, 0.2);
+  margin-top: -150px;
 }
 
 .mg-room:hover figcaption p,
