--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,32 @@
 @charset "UTF-8";
 
+/*Fuente normal*/
+@font-face
+{
+  font-family: AvantGardeBookBT;
+    src:url(fonts/AvantGardeBookBT.woff);
+}
+
+/*Fuente negrita*/
+@font-face
+{
+  font-family: AvantGardeDemiBT;
+    src:url(fonts/AvantGardeDemiBT.woff);
+}
+
+/*Fuente italica*/
+@font-face
+{
+  font-family: AVGARDNI;
+    src:url(fonts/AVGARDNI.woff);
+}
+
+
+.estilobanner
+{
+  font-family:  AvantGardeDemiBT
+}
+
 .container_test {
   position: relative;
   width: 100%;
@@ -45,7 +72,9 @@
   margin-top: 50px;
 }
 
-* {box-sizing: border-box}
+*{
+  box-sizing: border-box;
+}
 
 /* Container needed to position the overlay. Adjust the width as needed */
 .container1 {
@@ -213,6 +242,12 @@
 .menu-transparente{
   margin-top: 20px;
 }
+
+.menu-transparente button
+{
+  font-family: AvantGardeDemiBT;
+}
+
 #imglogo{
   display: block;
   margin: auto;
@@ -243,9 +278,10 @@
 
 /* The navigation menu links */
 .sidenav a {
+  font-family: AvantGardeDemiBT;
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 25px;
+  font-size: 20px;
   color: #818181;
   display: block;
   transition: 0.3s;
@@ -277,6 +313,8 @@
   .sidenav a {font-size: 18px;}
 } 
 .txt-desc-testimonios {
+  font-style: italic;
+  font-family: AVGARDNI;
   color: white;
 }
 
@@ -327,7 +365,6 @@ align-items: center;
 
 
 body {
-  font-family: "Open Sans";
   font-size: 14px;
   line-height: 23px;
   font-weight: 400;
@@ -649,7 +686,7 @@ img {
 }
 
 .btn {
-  font-family: "Playfair Display", serif;
+  font-family: AvantGardeDemiBT;
   font-size: 14px;
   border-radius: 1px;
   font-weight: 600;
@@ -2380,13 +2417,17 @@ ul.styled-list.list-star li:before {
   right: 0;
 }
 
+.mg-book-now div .row h3{
+  font-family:  AvantGardeBookBT;
+}
+
 .mg-book-now {
   background-color: #16262e;
   padding: 50px 0;
 }
 
 .mg-book-now .mg-bn-title {
-  font-family: "Playfair Display", serif;
+  font-family:  AvantGardeBookBT;
   color: #e7b315;
   font-size: 30px;
   line-height: 43px;
@@ -2768,7 +2809,13 @@ div.cs-skin-elastic .cs-options .cs-selected span::after {
 }
 
 .mg-c2a .col-md-12 {
+
   position: static;
+}
+
+.col-md-12 h2
+{
+  font-family: AvantGardeDemiBT;
 }
 
 .mg-c2a strong {
@@ -2835,7 +2882,7 @@ div.cs-skin-elastic .cs-options .cs-selected span::after {
 
 .mg-sec-title {
   text-align: center;
-  font-family: "Playfair Display", serif;
+
   position: relative;
   padding-bottom: 10px;
   margin-bottom: 40px;
@@ -2843,6 +2890,7 @@ div.cs-skin-elastic .cs-options .cs-selected span::after {
 
 .mg-sec-title h2 {
   color: #16262e;
+  font-family: AvantGardeBookBT;
   font-size: 30px;
   text-transform: uppercase;
   font-weight: 400;
@@ -2875,7 +2923,7 @@ div.cs-skin-elastic .cs-options .cs-selected span::after {
 
 .mg-sec-left-title,
 .mg-widget-title {
-  font-family: "Playfair Display", serif;
+  font-family: AvantGardeBookBT;
   color: #16262e;
   font-size: 25px;
   text-transform: uppercase;
@@ -3298,7 +3346,7 @@ div.cs-skin-elastic .cs-options .cs-selected span::after {
 
 .mg-light-testimonial .mg-testimonial-slider blockquote footer {
   color: #e7b315;
-  font-family: "Playfair Display", serif;
+  font-family: AvantGardeDemiBT;
   font-style: italic;
 }
 
@@ -3319,7 +3367,7 @@ div.cs-skin-elastic .cs-options .cs-selected span::after {
 
 .mg-testimonial-slider blockquote footer {
   color: #e7b315;
-  font-family: "Playfair Display", serif;
+  font-family: AvantGardeDemiBT;
   font-style: italic;
 }
 
